[project]
name = "code_review_env"
version = "1.0.0"
description = "Code Review environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.openenv]
server = "server.app:app"

[project.scripts]
server = "server.app:main"